--- a/pro_farm/templates/lang_select.html
+++ b/pro_farm/templates/lang_select.html
@@ -1,4 +1,4 @@
-<!-- {% load static %} -->
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,13 +11,14 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\animate.css">
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\owl.theme.default.min.css">
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\magnific-popup.css">
+    <link rel="stylesheet" href="{% static 'css/animate.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
 
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\owl.carousel.min.css">
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\flaticon.css">
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\style.css">
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
+
   </head>
   <body>
 
@@ -30,7 +31,7 @@
 
     <section class="hero-wrap degree-right js-fullheight">
       <div class="home-slider js-fullheight owl-carousel">
-        <div class="slider-item js-fullheight" style="background-image:url(/../farm_app/pro_farm/static/images/background4.jpg);">
+        <div class="slider-item js-fullheight" style="background-image:url({% static 'images/background4.jpg'%});">
           <div class="overlay"></div>
           <div class="container">
             <div class="row no-gutters slider-text js-fullheight align-items-center">
@@ -62,7 +63,7 @@
                 </div>
               </div>
               <div class="col-lg-6 ftco-animate" style="position: relative; left:1px;">
-                <img src="/../farm_app/pro_farm/static/images/kisan-1.png" alt="">
+                <img src="{% static 'images/kisan-1.png' %}" alt="">
               </div>
             </div>
           </div>
@@ -70,21 +71,28 @@
       </div>
     </section>
 
+    <!-- This button is used to go to signup_page -->
+    <form class='form' method="POST" , action='signup'>
 
-    <img src="{% static 'images/home.png' %}" alt="" />
+        {% csrf_token %}
+
+        <select class="form-control" name='language_selected' id="exampleFormControlSelect1">
+            
+            <option>English</option>
+            <option>Hindi</option>
+
+          </select>
+
+        <button type="submit" class="btn btn-success"> Submit </button>
+
+            <!-- <a href="http://127.0.0.1:8000/signup" 
+              class="btn btn-success btn-lg active" role="button"
+              aria-pressed="true">submit</a> -->
+
+    </form>
 
 
-<!-- >>>>>>@Ayush-Malik  -->
-{{var_1}} {{var_2}}
-
-{% if user.is_authenticated %}
-Hi {{ user.username }}!
-<p><a href="{% url 'logout' %}">logout</a></p>
-{% else %}
-<p>You are not logged in</p>
-<a href="{% url 'login' %}">login</a>
-{% endif %}
-<!--  -->
+    <!-- <img src="{% static 'images/home.png' %}" alt="" /> -->
 
 
     <!-- loader -->
@@ -94,20 +102,31 @@ Hi {{ user.username }}!
         </svg></div>
 
 
-    <script src="\..\farm_app\pro_farm\static\js\jquery.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery-migrate-3.0.1.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\popper.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\bootstrap.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery.easing.1.3.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery.waypoints.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery.stellar.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\owl.carousel.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery.magnific-popup.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery.animateNumber.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\scrollax.min.js"></script>
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/jquery-migrate-3.0.1.min.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
+    <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
+    <script src="{% static 'js/jquery.stellar.min.js' %}"></script>
+    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
+    <script src="{% static 'js/jquery.animateNumber.min.js' %}"></script>
+    <script src="{% static 'js/scrollax.min.js' %}"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="\..\farm_app\pro_farm\static\js\google-map.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\main.js"></script>
+    <script src="{% static 'js/google-map.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
+
+
+    <!-- {{var_1}} {{var_2}}
+
+  {% if user.is_authenticated %}
+      Hi {{ user.username }}!
+    <p><a href="{% url 'logout' %}">logout</a></p>
+  {% else %}
+      <p>You are not logged in</p>
+      <a href="{% url 'login' %}">login</a>
+  {% endif %} -->
   </body>
   
 </html>
