--- a/pro_farm/templates/signup.html
+++ b/pro_farm/templates/signup.html
@@ -1,29 +1,31 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <title>Login V1</title>
+  <title>Signup Page</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--===============================================================================================-->
-  <link rel="icon" type="image/png" href="\..\farm_app\pro_farm\static\images\icons\favicon.ico" />
+  <link rel="icon" type="image/png" href="{% static 'images\icons\favicon.ico' %}" />
   <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="\..\farm_app\pro_farm\static\vendor\bootstrap\css\bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="{% static 'vendor\bootstrap\css\bootstrap.min.css' %}">
   <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="\..\farm_app\pro_farm\static\fonts\font-awesome-4.7.0\css\font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="{% static 'fonts\font-awesome-4.7.0\css\font-awesome.min.css' %}">
   <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="\..\farm_app\pro_farm\static\vendor\animate\animate.css">
+  <link rel="stylesheet" type="text/css" href="{% static 'vendor\animate\animate.css' %}">
   <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="\..\farm_app\pro_farm\static\vendor\css-hamburgers\hamburgers.min.css">
+  <link rel="stylesheet" type="text/css" href="{% static 'vendor\css-hamburgers\hamburgers.min.css' %}">
   <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="\..\farm_app\pro_farm\static\vendor\select2\select2.min.css">
+  <link rel="stylesheet" type="text/css" href="{% static 'vendor\select2\select2.min.css' %}">
   <!--===============================================================================================-->
-  <link rel="stylesheet" type="text/css" href="\..\farm_app\pro_farm\static\css\util.css">
-  <link rel="stylesheet" type="text/css" href="\..\farm_app\pro_farm\static\css\style.css">
+  <link rel="stylesheet" type="text/css" href="{% static 'css\util.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css\style.css' %}">
   <!--===============================================================================================-->
 </head>
 
 <body>
+
 
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
@@ -34,16 +36,17 @@
     <div class="container-login100">
       <div class="wrap-login100">
         <div class="login100-pic js-tilt" data-tilt>
-          <img src="\..\farm_app\pro_farm\static\images\kisan-1.png" alt="IMG">
+          <img src="{% static 'images\kisan-1.png' %}" alt="IMG">
         </div>
 
-        <form class="login100-form validate-form">
+        <form class="login100-form validate-form" method="POST" action="submit_signup_data">
+          {% csrf_token %}
           <span class="login100-form-title">
-            Enter Credentials
+            {{Enter_Credentials}}
           </span>
 
           <div class="wrap-input100 validate-input" data-validate = "Valid number is of 10 integers">
-            <input class="input100" type="text" name="Phone_number" placeholder="Phone Number">
+            <input class="input100" type="text" name="Phone_number" placeholder="{{Phone_Number}}">
             <span class="focus-input100"></span>
             <span class="symbol-input100">
               <i class="fa fa-phone" aria-hidden="true"></i>
@@ -51,7 +54,7 @@
           </div>
 
           <div class="wrap-input100 validate-input" data-validate="Name is required">
-            <input class="input100" type="text" name="name" placeholder="Full Name">
+            <input class="input100" type="text" name="name" placeholder="{{Full_Name}}">
             <span class="focus-input100"></span>
             <span class="symbol-input100">
               <i class="fa fa-user" aria-hidden="true"></i>
@@ -60,7 +63,7 @@
 
           <div class="container-login100-form-btn">
             <button class="login100-form-btn">
-              Enter
+              {{Generate_OTP}}
             </button>
           </div>
           <br> <br> <br> <br> <br> <br>
@@ -79,34 +82,34 @@
 
 
   <!--===============================================================================================-->
-  <script src="\..\farm_app\pro_farm\static\vendor\jquery\jquery-3.2.1.min.js"></script>
+  <script src="{% static 'vendor\jquery\jquery-3.2.1.min.js' %}"></script>
   <!--===============================================================================================-->
-  <script src="\..\farm_app\pro_farm\static\vendor\bootstrap\js\popper.js"></script>
-  <script src="\..\farm_app\pro_farm\static\vendor\bootstrap\js\bootstrap.min.js"></script>
+  <script src="{% static 'vendor\bootstrap\js\popper.js' %}"></script>
+  <script src="{% static 'vendor\bootstrap\js\bootstrap.min.js' %}"></script>
   <!--===============================================================================================-->
-  <script src="\..\farm_app\pro_farm\static\vendor\select2\select2.min.js"></script>
+  <script src="{% static 'vendor\select2\select2.min.js' %}"></script>
   <!--===============================================================================================-->
-  <script src="\..\farm_app\pro_farm\static\vendor\tilt\tilt.jquery.min.js"></script>
+  <script src="{% static 'vendor\tilt\tilt.jquery.min.js' %}"></script>
   <script>
     $('.js-tilt').tilt({
       scale: 1.1
     })
   </script>
   <!--===============================================================================================-->
-  <script src="\..\farm_app\pro_farm\static\js\jquery.min.js"></script>
-  <script src="\..\farm_app\pro_farm\static\js\jquery-migrate-3.0.1.min.js"></script>
-  <script src="\..\farm_app\pro_farm\static\js\popper.min.js"></script>
-  <script src="\..\farm_app\pro_farm\static\js\bootstrap.min.js"></script>
-  <script src="\..\farm_app\pro_farm\static\js\jquery.easing.1.3.js"></script>
-  <script src="\..\farm_app\pro_farm\static\js\jquery.waypoints.min.js"></script>
-  <script src="\..\farm_app\pro_farm\static\js\jquery.stellar.min.js"></script>
-  <script src="\..\farm_app\pro_farm\static\js\owl.carousel.min.js"></script>
-  <script src="\..\farm_app\pro_farm\static\js\jquery.magnific-popup.min.js"></script>
-  <script src="\..\farm_app\pro_farm\static\js\jquery.animateNumber.min.js"></script>
-  <script src="\..\farm_app\pro_farm\static\js\scrollax.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="\..\farm_app\pro_farm\static\js\google-map.js"></script>
-  <script src="\..\farm_app\pro_farm\static\js\main.js"></script>
+  <script src="{% static 'js\jquery.min.js' %}"></script>
+  <script src="{% static 'js\jquery-migrate-3.0.1.min.js' %}"></script>
+  <script src="{% static 'js\popper.min.js' %}"></script>
+  <script src="{% static 'js\bootstrap.min.js' %}"></script>
+  <script src="{% static 'js\jquery.easing.1.3.js' %}"></script>
+  <script src="{% static 'js\jquery.waypoints.min.js' %}"></script>
+  <script src="{% static 'js\jquery.stellar.min.js' %}"></script>
+  <script src="{% static 'js\owl.carousel.min.js' %}"></script>
+  <script src="{% static 'js\jquery.magnific-popup.min.js' %}"></script>
+  <script src="{% static 'js\jquery.animateNumber.min.js' %}"></script>
+  <script src="{% static 'js\scrollax.min.js' %}"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false' %}"></script>
+  <script src="{% static 'js\google-map.js' %}"></script>
+  <script src="{% static 'js\main.js' %}"></script>
 
 </body>
 
