Added relevant texts

--- a/pro_farm/templates/confirm_OTP.html
+++ b/pro_farm/templates/confirm_OTP.html
@@ -56,9 +56,10 @@
 
 
 
+
                     <div class="container-login100-form-btn">
                         <button class="login100-form-btn">
-                            {{Generate_OTP}}
+                            {{Confirm}}
                         </button>
                     </div>
                     <br> <br> <br> <br> <br> <br>
