Updated the styling of user_home.html

--- a/pro_farm/templates/user_home.html
+++ b/pro_farm/templates/user_home.html
@@ -1,4 +1,4 @@
-<!-- {% load static %} -->
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -276,7 +276,7 @@
                     <div class="col-md-4 ftco-animate">
                         <div class="blog-entry-2">
                             <a href="blog-single.html" class="block-20-1"
-                                style="background-image: url('{% static 'images/ambani_sir.jpg' %});">
+                                style="background-image: url({% static 'images/ambani_sir.jpg' %});">
                             </a>
                             <div class="text p-4 d-block">
                                 <div class="meta mb-3">
@@ -292,7 +292,7 @@
                     <div class="col-md-4 ftco-animate">
                         <div class="blog-entry-2" data-aos-delay="100">
                             <a href="blog-single.html" class="block-20-1"
-                                style="background-image: url('{% static 'images/ambani_sir.jpg' %});">
+                                style="background-image: url({% static 'images/ambani_sir.jpg' %});">
                             </a>
                             <div class="text p-4">
                                 <div class="meta mb-3">
@@ -308,7 +308,7 @@
                     <div class="col-md-4 ftco-animate">
                         <div class="blog-entry-2" data-aos-delay="100">
                             <a href="blog-single.html" class="block-20-1"
-                                style="background-image: url('{% static 'images/ambani_sir.jpg' %});">
+                                style="background-image: url({% static 'images/ambani_sir.jpg' %});">
                             </a>
                             <div class="text p-4">
                                 <div class="meta mb-3">
@@ -345,7 +345,7 @@
                     <div class="col-md-4 ftco-animate">
                         <div class="blog-entry-2">
                             <a href="blog-single.html" class="block-20-1"
-                                style="background-image: url('{% static 'images/ambani_sir.jpg' %});">
+                                style="background-image: url({% static 'images/ambani_sir.jpg' %});">
                             </a>
                             <div class="text p-4 d-block">
                                 <div class="meta mb-3">
@@ -361,7 +361,7 @@
                     <div class="col-md-4 ftco-animate">
                         <div class="blog-entry-2" data-aos-delay="100">
                             <a href="blog-single.html" class="block-20-1"
-                                style="background-image: url('{% static 'images/ambani_sir.jpg' %});">
+                                style="background-image: url({% static 'images/ambani_sir.jpg' %});">
                             </a>
                             <div class="text p-4">
                                 <div class="meta mb-3">
@@ -377,7 +377,7 @@
                     <div class="col-md-4 ftco-animate">
                         <div class="blog-entry-2" data-aos-delay="100">
                             <a href="blog-single.html" class="block-20-1"
-                                style="background-image: url('{% static 'images/ambani_sir.jpg' %});">
+                                style="background-image: url({% static 'images/ambani_sir.jpg' %});">
                             </a>
                             <div class="text p-4">
                                 <div class="meta mb-3">
@@ -412,7 +412,7 @@
             </div>
             <div class="row no-gutters">
                 <div class="block-3 d-md-flex ftco-animate">
-                    <a href="portfolio.html" class="image" style="background-image: url('{% static 'images/ambani_sir.jpg' %}); "></a>
+                    <a href="portfolio.html" class="image" style="background-image: url({% static 'images/ambani_sir.jpg' %}); "></a>
                     <div class="text">
                         <h4 class="subheading">Illustration</h4>
                         <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a></h2>
@@ -422,7 +422,7 @@
                     </div>
                 </div>
                 <div class="block-3 d-md-flex ftco-animate">
-                    <a href="portfolio.html" class="image order-2" style="background-image: url('{% static 'images/ambani_sir.jpg' %}); "></a>
+                    <a href="portfolio.html" class="image order-2" style="background-image: url({% static 'images/ambani_sir.jpg' %}); "></a>
                     <div class="text order-1">
                         <h4 class="subheading">Application</h4>
                         <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a></h2>
@@ -432,7 +432,7 @@
                     </div>
                 </div>
                 <div class="block-3 d-md-flex ftco-animate">
-                    <a href="portfolio.html" class="image" style="background-image: url('{% static 'images/ambani_sir.jpg' %}); "></a>
+                    <a href="portfolio.html" class="image" style="background-image: url({% static 'images/ambani_sir.jpg' %}); "></a>
                     <div class="text">
                         <h4 class="subheading">Web Design</h4>
                         <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a></h2>
