--- a/pro_farm/templates/user_home.html
+++ b/pro_farm/templates/user_home.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Document</title>
+    <title>KisanTech</title>
 
 
     <!-- links -->
@@ -39,43 +39,22 @@
     <section class="hero-wrap degree-right js-fullheight">
         <div class="home-slider js-fullheight owl-carousel">
             <div class="slider-item js-fullheight"
-                style="background-image:url({% static 'images/background4.jpg' %});">
+                style="background-image:url({% static 'images/background1.jpg' %});">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
-                                <h1 class="mb-4">La la la</h1>
-                                <p style="color: white;">Lorem ipsum dolor sit amet.</p>
-                                <!-- <p class="mb-0"><a href="#" class="btn btn-primary py-md-3 py-2 px-2 px-md-4">Done</a></p> -->
+                                <h1 class="mb-4">KisanTech</h1>
+                                <p style="color: white;"><strong>WELL ROOTED TO NATURE.</strong></p>
                             </div>
-                            <!-- <div class="container">
-                                <div class="row">
-                                    <div class="col-md-2">
-                                        <div class="btn-group">
-                                            <button>English</button>
-                                            <button>Hindi</button>
-                                            <button>Punjabi</button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-2">
-                                        <div class="btn-group">
-                                            <button>Marathi</button>
-                                            <button>Telugu</button>
-                                            <button>Haryanvi</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div> -->
                         </div>
                         <div class="col-lg-6 ftco-animate" style="position: relative; left:1px;">
                             <div class="container">
                                 <div class="row">
                                     <div class="col-md-3"><br></div>
                                     <div class="col-md-3">
-                                        <img src="{% static 'images/ambani_sir.jpg' %}" style="border-radius: 50%; width: 200px; height: 200px;" alt="">
+                                        <img src="{% static 'images/user dp.jpg' %}" style="border-radius: 50%; width: 200px; height: 200px;" alt="">
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
                                         <h2>Name - ooiiii</h3>
@@ -88,14 +67,14 @@
                 </div>
             </div>
             <div class="slider-item js-fullheight"
-                style="background-image:url({% static 'images/kisan-1.png' %});">
+                style="background-image:url({% static 'images/background2.jpg' %});">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
-                                <h1 class="mb-4">La la la</h1>
-                                <p style="color: white;">Lorem ipsum dolor sit amet.</p>
+                                <h1 class="mb-4">KisanTech</h1>
+                                <p style="color: white;"><strong>WELL ROOTED TO NATURE.</strong></p>
                                 <!-- <p class="mb-0"><a href="#" class="btn btn-primary py-md-3 py-2 px-2 px-md-4">Done</a></p> -->
                             </div>
                             <!-- <div class="container">
@@ -124,7 +103,7 @@
                                 <div class="row">
                                     <div class="col-md-3"><br></div>
                                     <div class="col-md-3">
-                                        <img src="{% static 'images/ambani_sir.jpg' %}"
+                                        <img src="{% static 'images/user dp.jpg' %}"
                                             style="border-radius: 50%; width: 200px; height: 200px;" alt="">
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
@@ -137,14 +116,14 @@
                     </div>
                 </div>
             </div>
-            <div class="slider-item js-fullheight" style="background-image:url({% static 'images/home.png' %});">
+            <div class="slider-item js-fullheight" style="background-image:url({% static 'images/background3.jpg' %});">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
-                                <h1 class="mb-4">La la la</h1>
-                                <p style="color: white;">Lorem ipsum dolor sit amet.</p>
+                                <h1 class="mb-4">KisanTech</h1>
+                                <p style="color: white;"><strong>WELL ROOTED TO NATURE.</strong></p>
                                 <!-- <p class="mb-0"><a href="#" class="btn btn-primary py-md-3 py-2 px-2 px-md-4">Done</a></p> -->
                             </div>
                             <!-- <div class="container">
@@ -173,7 +152,7 @@
                                 <div class="row">
                                     <div class="col-md-3"><br></div>
                                     <div class="col-md-3">
-                                        <img src="{% static 'images/ambani_sir.jpg' %}"
+                                        <img src="{% static 'images/user dp.jpg' %}"
                                             style="border-radius: 50%; width: 200px; height: 200px;" alt="">
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
@@ -194,8 +173,8 @@
         <div class="container">
             <div class="row justify-content-center mb-5 pb-5">
                 <div class="col-md-7 text-center heading-section ftco-animate">
-                    <span class="subheading">Our Services</span>
-                    <h2>Racks provides a fully featured text services platform!</h2>
+                    <span class="subheading">THANKS FOR YOUR VISIT</span>
+                    <h2>HERE WE HAVE MORE FEATURES FOR YOU!!</h2>
                 </div>
             </div>
             <div class="row">
@@ -206,7 +185,7 @@
                                     class="align-self-center icon-layers"></span></div>
                         </div>
                         <div class="media-body p-2">
-                            <h3 class="heading">Unlimited Features</h3>
+                            <h3 class="heading">Financial Help</h3>
                             <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
                                 unorthographic.</p>
                         </div>
