--- a/pro_farm/templates/user_home.html
+++ b/pro_farm/templates/user_home.html
@@ -63,7 +63,7 @@
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
-                                <h1 class="mb-4">KisanTech</h1>
+                                <h1 class="mb-4 navbar-brand">Kisan<span style="color:#d1002c; display:inline-block;">Tech</span></h1>
                                 <p style="color: white;"><strong>WELL ROOTED TO NATURE.</strong></p>
                             </div>
                         </div>
@@ -73,22 +73,13 @@
                                     <div class="col-md-3"><br></div>
                                     <div class="col-md-3">
                                         <a href="#">
-                                            <img src="{% static 'images/user dp.jpg' %}"
-                                                style="border-radius: 50%; width: 200px; height: 170px;" alt="">
+                                            <img src="{% static 'images/edited_vali3.jpg' %}"
+                                                style="border-radius: 50%; width: 150px; height: 150px;" alt="">
                                         </a>
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
-                                        <h2>Name - ooiiii</h3>
-                                            <div class="row">
-                                                <div class="col-lg-4 col-sm-1 ftco-animate">
-                                                    <p>number-</p>
-                                                </div>
-                                                <div class="col-lg-8 col-sm-1 ftco-animate">
-                                                    <div class="text">
-                                                        <p class="number" data-number="1234567890">1234567890 - 1000</p>
-                                                    </div>
-                                                </div>
-                                            </div>
+                                        <h2 class="navbar-brand">Name-<span style="color:#d1002c; display:inline-block;">ooiiii</span></h2>
+                                            <p>number - 1234567890</p>
                                     </div>
                                 </div>
                             </div>
@@ -96,13 +87,13 @@
                     </div>
                 </div>
             </div>
-            <div class="slider-item js-fullheight" style="background-image:url({% static 'images/background2.jpg' %});">
+            <div class="slider-item js-fullheight" style="background-image:url({% static 'images/edited_vali2.jpg' %});">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
-                                <h1 class="mb-4">KisanTech</h1>
+                                <h1 class="mb-4 navbar-brand">Kisan<span style="color:#d1002c; display:inline-block;">Tech</span></h1>
                                 <p style="color: white;"><strong>WELL ROOTED TO NATURE.</strong></p>
                             </div>
                         </div>
@@ -112,22 +103,13 @@
                                     <div class="col-md-3"><br></div>
                                     <div class="col-md-3">
                                         <a href="#">
-                                            <img src="{% static 'images/user dp.jpg' %}"
-                                                style="border-radius: 50%; width: 200px; height: 170px;" alt="">
+                                            <img src="{% static 'images/edited_vali4.png' %}"
+                                                style="border-radius: 50%; width: 150px; height: 150px;" alt="">
                                         </a>
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
                                         <h2>Name - ooiiii</h3>
-                                            <div class="row">
-                                                <div class="col-lg-4 col-sm-1 ftco-animate">
-                                                    <p>number-</p>
-                                                </div>
-                                                <div class="col-lg-8 col-sm-1 ftco-animate">
-                                                    <div class="text">
-                                                        <p class="number" data-number="1234567890">1234567890 - 1000</p>
-                                                    </div>
-                                                </div>
-                                            </div>
+                                            <p>Number - 1234567890</p>
                                     </div>
                                 </div>
                             </div>
@@ -135,13 +117,13 @@
                     </div>
                 </div>
             </div>
-            <div class="slider-item js-fullheight" style="background-image:url({% static 'images/Bg.jpg' %});">
+            <div class="slider-item js-fullheight" style="background-image:url({% static 'images/b2.jpg' %});">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
-                                <h1 class="mb-4">KisanTech</h1>
+                                <h1 class="mb-4 navbar-brand">Kisan<span style="color:#d1002c; display:inline-block;">Tech</span></h1>
                                 <p style="color: #fff;"><strong>WELL ROOTED TO NATURE.</strong></p>
                             </div>
                         </div>
@@ -152,21 +134,12 @@
                                     <div class="col-md-3">
                                         <a href="#">
                                             <img src="{% static 'images/user dp.jpg' %}"
-                                                style="border-radius: 50%; width: 200px; height: 170px;" alt="">
+                                                style="border-radius: 50%; width: 150px; height: 150px;" alt="">
                                         </a>
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
                                         <h2>Name - ooiiii</h3>
-                                            <div class="row">
-                                                <div class="col-lg-4 col-sm-1 ftco-animate">
-                                                    <p>number-</p>
-                                                </div>
-                                                <div class="col-lg-8 col-sm-1 ftco-animate">
-                                                    <div class="text">
-                                                        <p class="number" data-number="1234567890">1234567890 - 1000</p>
-                                                    </div>
-                                                </div>
-                                            </div>
+                                            <p>Number - 1234567890</p>
                                     </div>
                                 </div>
                             </div>
@@ -185,12 +158,12 @@
     <!-- Heading for main features -->
     <section class="ftco-section-2 degree-right">
         <div class="container">
-            <div class="row justify-content-center mb-5 pb-5">
+            <div class="row justify-content-center mb-0 pb-0 mt-5 pt-5">
                 <div class="col-md-7 text-center heading-section ftco-animate">
-                    <span class="subheading">OUR SPECIAL FEATURES</span>
-                    <h2>HERE YOU WILL GET THE INFORMATION OF WEATHER OF YOUR LOCATION, FINANCIAL
-                        HELP AND FERTILIZERS SUITABLE FOR YOUR CROPS!!
-                    </h2>
+                    <h2 class="myheading"> OUR SPECIAL FEATURES </h2>
+                    <span class="subheading">HERE YOU WILL GET THE INFORMATION OF WEATHER OF YOUR LOCATION, FINANCIAL
+                    HELP AND FERTILIZERS SUITABLE FOR YOUR CROPS!!
+                    </span>
                 </div>
             </div>
         </div>
@@ -284,7 +257,7 @@
                                 <div class="meta mb-3">
                                     <div><a href="#">WEATHER FORECAST</a></div>
                                     <div><a href="#"></a></div>
-                                    <div><a href="#" class="meta-chat"><span class="icon-chat"></span></a></div>
+                                    <div><a href="#" class="meta-chat"><span class="icon-cloud"></span></a></div>
                                 </div>
                                 <h3 class="heading"><a href="#">click here to know the climatic changes for the next
                                         seven days.</a></h3>
@@ -300,7 +273,7 @@
                                 <div class="meta mb-3">
                                     <div><a href="#">Financial help</a></div>
                                     <div><a href="#"></a></div>
-                                    <div><a href="#" class="meta-chat"><span class="icon-chat"></span></a></div>
+                                    <div><a href="#" class="meta-chat"><span class="icon-inr"></span></a></div>
                                 </div>
                                 <h3 class="heading"><a href="#">Click here to get the benifit of amazing loan and
                                         insurance offers.</a></h3>
@@ -316,7 +289,7 @@
                                 <div class="meta mb-3">
                                     <div><a href="#">Shop now</a></div>
                                     <div><a href="#"></a></div>
-                                    <div><a href="#" class="meta-chat"><span class="icon-chat"></span></a></div>
+                                    <div><a href="#" class="meta-chat"><span class="icon-institution"></span></a></div>
                                 </div>
                                 <h3 class="heading"><a href="#">Click here to get the appropriate materials for
                                         your crop at best price.</a></h3>
@@ -339,13 +312,13 @@
             <div class="row no-gutters justify-content-center mb-5 pb-5">
                 <div class="col-md-7 text-center heading-section ftco-animate">
                     <span class="subheading">Videos</span>
-                    <h2>INFORMATIVE VIDEOS FOR YOU</h2>
+                    <h2 class="myheading">INFORMATIVE VIDEOS FOR YOU</h2>
                 </div>
             </div>
             <div class="row no-gutters">
                 <div class="block-3 d-md-flex ftco-animate">
-                    <a href="portfolio.html" class="image"
-                        style="background-image: url({% static 'images/a.png' %}); "></a>
+                    <iframe class="image" src="https://www.youtube-nocookie.com/embed/be-TpNWMCc8" frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="text">
                         <h4 class="subheading">Illustration</h4>
                         <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a>
@@ -356,8 +329,8 @@
                     </div>
                 </div>
                 <div class="block-3 d-md-flex ftco-animate">
-                    <a href="portfolio.html" class="image order-2"
-                        style="background-image: url({% static 'images/b.jpg' %}); "></a>
+                    <iframe  class="image order-2" src="https://www.youtube-nocookie.com/embed/be-TpNWMCc8" frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="text order-1">
                         <h4 class="subheading">Application</h4>
                         <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a>
@@ -368,8 +341,8 @@
                     </div>
                 </div>
                 <div class="block-3 d-md-flex ftco-animate">
-                    <a href="portfolio.html" class="image"
-                        style="background-image: url({% static 'images/c.png' %}); "></a>
+                    <iframe class="image" src="https://www.youtube-nocookie.com/embed/be-TpNWMCc8" frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="text">
                         <h4 class="subheading">Web Design</h4>
                         <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a>
@@ -393,8 +366,8 @@
         <div class="container">
             <div class="row justify-content-center mb-5 pb-5">
                 <div class="col-md-7 text-center heading-section ftco-animate">
-                    <span class="subheading">THANKS FOR YOUR VISIT</span>
-                    <h2>HERE WE HAVE MORE FEATURES FOR YOU!!</h2>
+                    <p class="myheading">THANKS FOR YOUR VISIT</p>
+                    <p class="subheading">HERE WE HAVE MORE FEATURES FOR YOU!!</p>
                 </div>
             </div>
             <div class="row">
